--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.54.1",
     "react-icons": "^5.4.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.0.2",
+    "redux": "^5.0.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.1"
