--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "redux": "^5.0.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "use-debounce": "^10.0.4",
     "zod": "^3.24.1"
   },
   "devDependencies": {
